# grider

./: .gitignore  Cargo.toml  README.md  build_rs_cov.profraw  ci.yml
.github/workflows/: ci.yml
benches/: grid.rs  process_lines_benchmark.rs
src/: debug.rs  drawing.rs  grid.rs  grid_like.rs  grid_subset.rs  lib.rs  main.rs
src/docs/: debug.md
src/grid/: components.rs  config.rs  constants.rs  grid_like.rs  grid_subset.rs  lines.rs  mod.rs  new_grid_like.rs  traits.rs
src/snapshots/: grider__tests__grid_custom_config_1.snap  grider__tests__grid_processing_small_image.snap  grider__tests__process_image.snap  grider__tests__process_lines_large_image.snap  grider__tests__process_lines_small_image.snap
