[package]
name = "grider"
version = "0.1.0"
edition = "2021"
[dependencies]
image = "0.25"
imageproc = "0.25"
insta = { version = "1.42.0", features = ["yaml", "redactions"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_derive = { version = "1.0", optional = true }
rayon = "1"
smallvec = { version = "1.13", features = ["serde"] }
pretty_assertions = "1.4.1"
anyhow = "1.0.95"
proptest = "1.6.0"
rand = "0.8.5"
thiserror = "2.0.10"
test-case = "3.3.1"
[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "grid"
harness = false

[features]
debug = []
default = ["serde"]
serde = [
    "dep:serde",
    "dep:serde_derive",
] # Enable serde and serde_derive when the "serde" feature is active
