[package]
name = "grider"
version = "0.1.0"
edition = "2021"
[dependencies]
image = "0.25"
imageproc = "0.25"
insta = { version = "1.42.0", features = ["yaml", "redactions"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_derive = { version = "1.0", optional = true }
rayon = "1"
smallvec = { version = "1.13", features = ["serde"] }
pretty_assertions = "1.4.1"
anyhow = "1.0.95"
proptest = "1.6.0"
rand = "0.9.0"
thiserror = "2.0.10"
test-case = "3.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.26", features = ["derive"] }
[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "grid"
harness = false

[features]
debug = ["drawing"]
drawing = []
default = ["serde"]
serde = [
    "dep:serde",
    "dep:serde_derive",
] # Enable serde and serde_derive when the "serde" feature is active
